--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,7 @@
-#Script provided by Thomas Feher
-#Not yet used (Sept 2016) for continuous integration by Audacity Team
-#but developers who clone audacity.git can adapt and use.
-#useful for Linux-only developers.
+#Original script provided by Thomas Feher and subsequently adapted.
 #if you want to work on this, please talk with us on
 # https://lists.sourceforge.net/lists/listinfo/audacity-devel
-#build time is circa 50 mins.
+#build time is circa 7 mins.
 version: 2.3.0-alpha-{build}
 branches:
   only:
@@ -13,7 +10,7 @@ branches:
   - msc_ver
   - post-vs2013
   - master
-image: Visual Studio 2013
+image: Visual Studio 2017
 shallow_clone: true # reduce traffic
 install:
     - 'echo #define REV_LONG "%APPVEYOR_REPO_COMMIT%" > src\RevisionIdent.h'
@@ -24,7 +21,7 @@ install:
     # download wxWidgets
     - git clone --recurse-submodules --branch v3.1.1 --depth 1 https://github.com/audacity/wxWidgets.git %WXWIN%
     # build wxWidgets
-    - msbuild /m %WXWIN%\build\msw\wx_vc12.sln "/p:Configuration=DLL Release;PlatformToolset=v120;WholeProgramOptimization=true" /target:adv,base,core,html,net,qa,wxexpat,wxjpeg,wxpng,wxtiff,wxzlib,xml /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+    - msbuild /m %WXWIN%\build\msw\wx_vc15.sln "/p:Configuration=DLL Release;PlatformToolset=v140;WholeProgramOptimization=true" /target:adv,base,core,html,net,qa,wxexpat,wxjpeg,wxpng,wxtiff,wxzlib,xml /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 environment:
     WXWIN: '%APPVEYOR_BUILD_FOLDER%\..\wxWidgets'
     AUDACITY_ROOT: '%APPVEYOR_BUILD_FOLDER%'
@@ -34,9 +31,9 @@ environment:
     #project: win/audacity.sln
 #configuration:
     #- Release
-build_script: # build all targets except of `help`
+build_script: # build all targets except `help`
 - cmd: >-
-    msbuild /m win/audacity.sln /p:Configuration=Release;PlatformToolset=v120;WholeProgramOptimization=true /target:expat,filedialog,libflac++,libflac,libid3tag,libmad,libnyquist,libogg,libscorealign,libsndfile,libsoxr,libvamp,libvorbis,lv2,portaudio-v19,portmidi,portmixer,portsmf,sbsms,soundtouch,twolame,Audacity /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
+    msbuild /m win/audacity.sln /p:Configuration=Release;PlatformToolset=v140;WholeProgramOptimization=true /target:expat,filedialog,libflac++,libflac,libid3tag,libmad,libnyquist,libogg,libscorealign,libsndfile,libsoxr,libvamp,libvorbis,lv2,portaudio-v19,portmidi,portmixer,portsmf,sbsms,soundtouch,twolame,Audacity /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
     del /S win\Release\*.ipdb &&
     del /S win\Release\*.iobj &&
     del /S win\Release\*.lib &&
